Remove custom `ProtocolInput` and `ProtocolOut` enums, use `tinic_ipc_protocol` crate for IPC types. Refactor signal handling to align with new enums.

--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -23,6 +23,8 @@ tokio = { version = "1.45.0", features = ["full"] }
 async-trait = "0.1.87"
 messages = "0.3.1"
 serde_json = "1.0.148"
+tinic_ipc_protocol = { git = "https://github.com/Xsimple1010/Tinic.git", version = "0.1.4" }
+
 
 # Uncomment below to target the web.
 # tokio_with_wasm = { version = "0.8.5", features = ["rt", "macros", "time"] }
