--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 # Do not change the name of this crate.
 name = "hub"
-version = "0.1.0"
+version = "0.1.2"
 edition = "2024"
 
 [lib]
@@ -24,7 +24,8 @@ async-trait = "0.1.87"
 messages = "0.3.1"
 serde_json = "1.0.148"
 tinic_ipc_protocol = { git = "https://github.com/Xsimple1010/Tinic.git", version = "0.1.4" }
-#tinic_super = { git = "https://github.com/Xsimple1010/Tinic.git", version = "0.1.1" }
+tinic_super = { git = "https://github.com/Xsimple1010/Tinic" }
+tinic_database = { git = "https://github.com/Xsimple1010/Tinic" }
 
 
 # Uncomment below to target the web.
