--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   rinf: ^8.8.1
   path_provider: ^2.1.5
   dio: ^5.9.0
+  flutter_riverpod: ^3.2.0
+  flutter_animate: ^4.5.2
 
 dev_dependencies:
   flutter_test:
